third_party/move/move-prover/interpreter-testsuite/tests/concrete_check/choice.exp
Running Move unit tests
[ FAIL    ] 0x2::A::simple_number_min_range_failure
[ FAIL    ] 0x2::A::simple_number_range_failure
[ PASS    ] 0x2::A::unroll_address_success
[ FAIL    ] 0x2::A::unroll_address_unsatisfied_predicate
[ FAIL    ] 0x2::A::vector_choose_min_unsatisfied_predicate
[ PASS    ] 0x2::A::vector_choose_success
[ FAIL    ] 0x2::A::vector_choose_unsatisfied_predicate

Test failures:

Failures in 0x2::A:

┌── simple_number_min_range_failure ──────
│ error: failed to evaluate expression: enumeration of a non-address type domain is not supported
│    ┌─ tests/concrete_check/choice.move:78:42
│    │
│ 78 │         ensures result <= (choose min x: u64 where x >= 4);
│    │                                          ^^^
│
│ error: failed to evaluate expression: unexpected error code
│    ┌─ tests/concrete_check/choice.move:78:17
│    │
│ 78 │         ensures result <= (choose min x: u64 where x >= 4);
│    │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
│
│
└──────────────────


┌── simple_number_range_failure ──────
│ error: failed to evaluate expression: enumeration of a non-address type domain is not supported
│    ┌─ tests/concrete_check/choice.move:71:38
│    │
│ 71 │         ensures result <= (choose x: u64 where x >= 4);
│    │                                      ^^^
│
│ error: failed to evaluate expression: unexpected error code
│    ┌─ tests/concrete_check/choice.move:71:17
│    │
│ 71 │         ensures result <= (choose x: u64 where x >= 4);
│    │                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
│
│
└──────────────────


┌── unroll_address_unsatisfied_predicate ──────
│ error: failed to evaluate expression: choose fails to satisfy a predicate
│    ┌─ tests/concrete_check/choice.move:23:51
│    │
│ 23 │         let post choice = choose a: address where !exists<R>(a);
│    │                                                   ^^^^^^^^^^^^^
│
│
└──────────────────


┌── vector_choose_min_unsatisfied_predicate ──────
│ error: failed to evaluate expression: choose min fails to satisfy a predicate
│    ┌─ tests/concrete_check/choice.move:64:68
│    │
│ 64 │         let post choice_min = choose min i in 0..len(result) where result[i] == 3;
│    │                                                                    ^^^^^^^^^^^^^^
│
│
└──────────────────


┌── vector_choose_unsatisfied_predicate ──────
│ error: failed to evaluate expression: choose fails to satisfy a predicate
│    ┌─ tests/concrete_check/choice.move:51:60
│    │
│ 51 │         let post choice = choose i in 0..len(result) where result[i] == 3;
│    │                                                            ^^^^^^^^^^^^^^
│
│
└──────────────────

Test result: FAILED. Total tests: 7; passed: 2; failed: 5
